src/objects/Care_Team_Member__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Medical_Professional__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Medical Professional</label>
        <referenceTo>Medical_Professional__c</referenceTo>
        <relationshipLabel>Care Team Members</relationshipLabel>
        <relationshipName>Care_Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Doctor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Information Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onsite Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel Concierge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Treatment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Treatment</label>
        <referenceTo>Treatment__c</referenceTo>
        <relationshipLabel>Care Team Members</relationshipLabel>
        <relationshipName>Care_Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UniqueId__c</fullName>
        <description>TreatmentId : UserId</description>
        <inlineHelpText>TreatmentId : UserId</inlineHelpText>
        <label>UniqueId</label>
        <length>37</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Care_Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Care Team Member</label>
    <nameField>
        <label>Care Team Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Care Team Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>